--- a/configs/nyx/sscii.ini
+++ b/configs/nyx/sscii.ini
@@ -6,7 +6,7 @@
 
 [EMC]
 MACHINE                 = YSSC2P
-VERSION			= 1.0
+VERSION			= 1.1
 
 [DISPLAY]
 DISPLAY			= axis
@@ -62,7 +62,29 @@ LINEAR_UNITS		= mm
 ANGULAR_UNITS		= degree
 POSITION_FILE		= sscii.pos
 
-[AXIS_0]
+[KINS]
+KINEMATICS = trivkins
+JOINTS = 3
+
+[AXIS_X]
+MAX_VELOCITY		= 150
+MAX_ACCELERATION	= 6800
+MIN_LIMIT		= -500
+MAX_LIMIT		= 500
+
+[AXIS_Y]
+MAX_VELOCITY		= 150
+MAX_ACCELERATION	= 6800
+MIN_LIMIT		= -500
+MAX_LIMIT		= 500
+
+[AXIS_Z]
+MAX_VELOCITY		= 150
+MAX_ACCELERATION	= 6800.0
+MIN_LIMIT		= -500.0
+MAX_LIMIT		= 500
+
+[JOINT_0]
 TYPE			= LINEAR
 HOME			= 0
 MAX_VELOCITY		= 150
@@ -79,7 +101,7 @@ HOME_LATCH_VEL		= 0
 HOME_USE_INDEX		= NO
 HOME_SEQUENCE		= 0
 
-[AXIS_1]
+[JOINT_1]
 TYPE			= LINEAR
 HOME			= 0
 MAX_VELOCITY		= 150
@@ -96,7 +118,7 @@ HOME_LATCH_VEL		= 0
 HOME_USE_INDEX		= NO
 HOME_SEQUENCE		= 0
 
-[AXIS_2]
+[JOINT_2]
 TYPE			= LINEAR
 HOME			= 0
 MAX_VELOCITY		= 150
