--- a/configs/nyx/nyx-mds3.ini
+++ b/configs/nyx/nyx-mds3.ini
@@ -1,11 +1,11 @@
 #
-# NYX v2.3 YMDS2P LinuxCNC 2.8 sample config
+# NYX v2.3 YMDS3P LinuxCNC 2.8 sample config
 #
 # 2019, http://www.yurtaev.com
 #
 
 [EMC]
-MACHINE                 = YMDS2P
+MACHINE                 = YMDS3P
 VERSION			= 1.1
 
 [DISPLAY]
@@ -24,35 +24,35 @@ PROGRAM_PREFIX		= /home/dmitry/linuxcnc/nc_files
 INTRO_GRAPHIC		= linuxcnc.gif
 INTRO_TIME		= 1
 INCREMENTS		= 1mm, 0.1mm, 0.01mm, 0.001mm
-PYVCP			= nyx-7.xml
+PYVCP			= nyx-8.xml
 
 [APPLICATIONS]
 DELAY			= 1
-#APP			= nyx-mds-startup.sh
+#APP			= nyx-mds3-startup.sh
 
 [TASK]
 TASK			= milltask
 CYCLE_TIME		= 0.01
 
 [RS274NGC]
-PARAMETER_FILE		= nyx-mds.var
+PARAMETER_FILE		= nyx-mds3.var
 
 [EMCMOT]
 EMCMOT			= motmod
-SERVO_PERIOD		= 888888
+SERVO_PERIOD		= 222222
 COMM_TIMEOUT		= 1.0
 COMM_WAIT		= 0.010
 
 [HAL]
 HALUI			= halui
 HALFILE			= nyx.hal
-POSTGUI_HALFILE		= nyx-7-pgui.hal
-#SHUTDOWN		= nyx-mds-shutdown.hal
+POSTGUI_HALFILE		= nyx-8-pgui.hal
+#SHUTDOWN		= nyx-ssc3-shutdown.hal
 
 [NYX]
-PARAMS			= /usr/share/nyx/mds.bin
-AXES			= 7
-VEL_SCALE		= 10
+PARAMS			= /usr/share/nyx/dj.bin
+AXES			= 8
+VEL_SCALE		= 100
 
 [EMCIO]
 EMCIO			= iov2
@@ -64,7 +64,7 @@ HOME			= 0 0 0
 NO_FORCE_HOMING 	= 1
 LINEAR_UNITS		= mm
 ANGULAR_UNITS		= degree
-POSITION_FILE		= nyx-mds.pos
+POSITION_FILE		= nyx-mds3.pos
 
 [KINS]
 KINEMATICS = trivkins
