--- a/configs/nyx/nyx-ssc3.ini
+++ b/configs/nyx/nyx-ssc3.ini
@@ -1,7 +1,7 @@
 #
-# YSSC2P/YMDS2P/YSSC3P sample config
+# NYX v2.3 YSSC3P LinuxCNC 2.8 sample config
 #
-# http://www.yurtaev.com
+# 2019, http://www.yurtaev.com
 #
 
 [EMC]
@@ -20,7 +20,7 @@ MAX_LINEAR_VELOCITY	= 250
 DEFAULT_LINEAR_VELOCITY	= 50
 DEFAULT_SPINDLE_SPEED	= 100
 
-PROGRAM_PREFIX		= ~/linuxcnc/nc_files
+PROGRAM_PREFIX		= /home/dmitry/linuxcnc/nc_files
 INTRO_GRAPHIC		= linuxcnc.gif
 INTRO_TIME		= 1
 INCREMENTS		= 1mm, 0.1mm, 0.01mm, 0.001mm
@@ -45,13 +45,14 @@ COMM_WAIT		= 0.010
 
 [HAL]
 HALUI			= halui
-HALFILE			= nyx-ssc3.hal
-POSTGUI_HALFILE		= nyx-ssc3-pgui.hal
+HALFILE			= nyx.hal
+POSTGUI_HALFILE		= nyx-8-pgui.hal
 #SHUTDOWN		= nyx-ssc3-shutdown.hal
 
 [NYX]
 PARAMS			= /usr/share/nyx/j3.bin
 AXES			= 8
+VEL_SCALE		= 100
 
 [EMCIO]
 EMCIO			= iov2
@@ -71,32 +72,32 @@ JOINTS = 3
 
 [AXIS_X]
 MAX_VELOCITY		= 150
-MAX_ACCELERATION	= 3000
+MAX_ACCELERATION	= 6800
 MIN_LIMIT		= -500
 MAX_LIMIT		= 500
 
 [AXIS_Y]
 MAX_VELOCITY		= 150
-MAX_ACCELERATION	= 3000
+MAX_ACCELERATION	= 6800
 MIN_LIMIT		= -500
 MAX_LIMIT		= 500
 
 [AXIS_Z]
 MAX_VELOCITY		= 150
-MAX_ACCELERATION	= 3000
-MIN_LIMIT		= -500
+MAX_ACCELERATION	= 6800.0
+MIN_LIMIT		= -500.0
 MAX_LIMIT		= 500
 
 [JOINT_0]
 TYPE			= LINEAR
 HOME			= 0
 MAX_VELOCITY		= 150
-MAX_ACCELERATION	= 3000
-BACKLASH		= 0.0
+MAX_ACCELERATION	= 6800
+BACKLASH		= 0.000
 SCALE			= 10.0
 MIN_LIMIT		= -500
 MAX_LIMIT		= 500
-FERROR			= 50
+FERROR			= 10
 MIN_FERROR		= 5
 HOME_OFFSET		= 0
 HOME_SEARCH_VEL		= 0
@@ -108,12 +109,12 @@ HOME_SEQUENCE		= 0
 TYPE			= LINEAR
 HOME			= 0
 MAX_VELOCITY		= 150
-MAX_ACCELERATION	= 3000
-BACKLASH		= 0.0
+MAX_ACCELERATION	= 6800
+BACKLASH		= 0.000
 SCALE			= 10.0
 MIN_LIMIT		= -500
 MAX_LIMIT		= 500
-FERROR			= 50
+FERROR			= 10
 MIN_FERROR		= 5
 HOME_OFFSET		= 0
 HOME_SEARCH_VEL		= 0
@@ -125,12 +126,12 @@ HOME_SEQUENCE		= 0
 TYPE			= LINEAR
 HOME			= 0
 MAX_VELOCITY		= 150
-MAX_ACCELERATION	= 3000
-BACKLASH		= 0.0
+MAX_ACCELERATION	= 6800.0
+BACKLASH		= 0.000
 SCALE			= 10.0
-MIN_LIMIT		= -500
+MIN_LIMIT		= -500.0
 MAX_LIMIT		= 500
-FERROR			= 50
+FERROR			= 10
 MIN_FERROR		= 5
 HOME_OFFSET		= 0
 HOME_SEARCH_VEL		= 0
