--- a/configs/nyx/sscii.ini
+++ b/configs/nyx/sscii.ini
@@ -1,7 +1,7 @@
 #
-# YSSC2P v1.3 sample config
+# NYX v1.3 YSSC2P LinuxCNC 2.8 sample config
 #
-# http://www.yurtaev.com
+# 2019, http://www.yurtaev.com
 #
 
 [EMC]
@@ -20,11 +20,11 @@ MAX_LINEAR_VELOCITY	= 250
 DEFAULT_LINEAR_VELOCITY	= 50
 DEFAULT_SPINDLE_SPEED	= 100
 
-PROGRAM_PREFIX		= ~/linuxcnc/nc_files
+PROGRAM_PREFIX		= /home/dmitry/linuxcnc/nc_files
 INTRO_GRAPHIC		= linuxcnc.gif
 INTRO_TIME		= 1
 INCREMENTS		= 1mm, 0.1mm, 0.01mm, 0.001mm
-PYVCP			= sscii-6.xml
+PYVCP			= nyx-6.xml
 
 [APPLICATIONS]
 DELAY			= 1
@@ -68,32 +68,32 @@ JOINTS = 3
 
 [AXIS_X]
 MAX_VELOCITY		= 150
-MAX_ACCELERATION	= 3000
+MAX_ACCELERATION	= 6800
 MIN_LIMIT		= -500
 MAX_LIMIT		= 500
 
 [AXIS_Y]
 MAX_VELOCITY		= 150
-MAX_ACCELERATION	= 3000
+MAX_ACCELERATION	= 6800
 MIN_LIMIT		= -500
 MAX_LIMIT		= 500
 
 [AXIS_Z]
 MAX_VELOCITY		= 150
-MAX_ACCELERATION	= 3000
-MIN_LIMIT		= -500
+MAX_ACCELERATION	= 6800.0
+MIN_LIMIT		= -500.0
 MAX_LIMIT		= 500
 
 [JOINT_0]
 TYPE			= LINEAR
 HOME			= 0
 MAX_VELOCITY		= 150
-MAX_ACCELERATION	= 3000
-BACKLASH		= 0.0
+MAX_ACCELERATION	= 6800
+BACKLASH		= 0.000
 SCALE			= 10.0
 MIN_LIMIT		= -500
 MAX_LIMIT		= 500
-FERROR			= 50
+FERROR			= 10
 MIN_FERROR		= 5
 HOME_OFFSET		= 0
 HOME_SEARCH_VEL		= 0
@@ -105,12 +105,12 @@ HOME_SEQUENCE		= 0
 TYPE			= LINEAR
 HOME			= 0
 MAX_VELOCITY		= 150
-MAX_ACCELERATION	= 3000
-BACKLASH		= 0.0
+MAX_ACCELERATION	= 6800
+BACKLASH		= 0.000
 SCALE			= 10.0
 MIN_LIMIT		= -500
 MAX_LIMIT		= 500
-FERROR			= 50
+FERROR			= 10
 MIN_FERROR		= 5
 HOME_OFFSET		= 0
 HOME_SEARCH_VEL		= 0
@@ -122,12 +122,12 @@ HOME_SEQUENCE		= 0
 TYPE			= LINEAR
 HOME			= 0
 MAX_VELOCITY		= 150
-MAX_ACCELERATION	= 3000
-BACKLASH		= 0.0
+MAX_ACCELERATION	= 6800.0
+BACKLASH		= 0.000
 SCALE			= 10.0
-MIN_LIMIT		= -500
+MIN_LIMIT		= -500.0
 MAX_LIMIT		= 500
-FERROR			= 50
+FERROR			= 10
 MIN_FERROR		= 5
 HOME_OFFSET		= 0
 HOME_SEARCH_VEL		= 0
