--- a/configs/nyx/nyx-mds.ini
+++ b/configs/nyx/nyx-mds.ini
@@ -46,6 +46,7 @@ COMM_WAIT		= 0.010
 [HAL]
 HALUI			= halui
 HALFILE			= nyx.hal
+HALFILE			= nyx-sp.hal
 POSTGUI_HALFILE		= nyx-7-pgui.hal
 #SHUTDOWN		= nyx-mds-shutdown.hal
 
