--- a/configs/nyx/nyx-mtl2.ini
+++ b/configs/nyx/nyx-mtl2.ini
@@ -52,7 +52,8 @@ POSTGUI_HALFILE		= nyx-8-pgui.hal
 [NYX]
 PARAMS			= /usr/share/nyx/sgds.bin
 AXES			= 8
-VEL_SCALE		= 10
+# counts/s to rpm - divide by 131072/60
+VEL_SCALE		= 2184.533333
 
 [EMCIO]
 EMCIO			= iov2
