--- a/configs/nyx/nyx-ssc3.ini
+++ b/configs/nyx/nyx-ssc3.ini
@@ -46,6 +46,7 @@ COMM_WAIT		= 0.010
 [HAL]
 HALUI			= halui
 HALFILE			= nyx.hal
+HALFILE			= nyx-sp.hal
 POSTGUI_HALFILE		= nyx-8-pgui.hal
 #SHUTDOWN		= nyx-ssc3-shutdown.hal
 
