--- a/configs/nyx/nyx-mds.ini
+++ b/configs/nyx/nyx-mds.ini
@@ -20,7 +20,7 @@ MAX_LINEAR_VELOCITY	= 250
 DEFAULT_LINEAR_VELOCITY	= 50
 DEFAULT_SPINDLE_SPEED	= 100
 
-PROGRAM_PREFIX		= /home/dmitry/linuxcnc/nc_files
+PROGRAM_PREFIX		= ~/linuxcnc/nc_files
 INTRO_GRAPHIC		= linuxcnc.gif
 INTRO_TIME		= 1
 INCREMENTS		= 1mm, 0.1mm, 0.01mm, 0.001mm
@@ -46,7 +46,7 @@ COMM_WAIT		= 0.010
 [HAL]
 HALUI			= halui
 HALFILE			= nyx.hal
-HALFILE			= nyx-sp.hal
+HALFILE			= nyx-mds-sp.hal
 POSTGUI_HALFILE		= nyx-7-pgui.hal
 #SHUTDOWN		= nyx-mds-shutdown.hal
 
